fix: set min-height on input to support text center aligning in IE (#628)

--- a/src/angular-core/styles/includes/_form.scss
+++ b/src/angular-core/styles/includes/_form.scss
@@ -45,6 +45,7 @@ $labelColor: if($sbbBusiness, $sbbColorGranite, $sbbColorGrey);
   line-height: 1.5;
   font-size: pxToRem($sizeFontDefault);
   -webkit-appearance: none;
+  min-height: if($sbbBusiness, 36px, 48px);
 
   &::-ms-clear {
     display: none;
